--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,3 +108,57 @@ body {
   border-radius: 3px;
   cursor: pointer;
 }
+
+#result {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  border-top: 1px solid #ffffff34;
+  padding: 0.75rem 0;
+}
+
+#bmi {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 2.25rem;
+}
+
+#bmi span:last-child {
+  font-size: 0.875rem;
+  color: #cbd5e1;
+}
+
+#description {
+  width: 15.5rem;
+}
+
+#more-info {
+  border-top: 1px solid #ffffff34;
+  padding-top: 1.5rem;
+}
+#more-info a {
+  color: #16a34a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.6rem;
+  font-size: 0.875rem;
+  text-decoration: none;
+  transition: color 0.5s;
+}
+
+#more-info a:hover {
+  color: #cbd5e1;
+}
+.hidden {
+  display: none;
+}
+
+.normal {
+  color: #16a34a;
+}
+
+.attention {
+  color: #dc2626;
+}
